German/Lenguajes y compiladores/Lab3/tests/bad/bad12.imp
data Bool = True | False
data N = O | S <N>

method suma (n : N, b : Bool) returns (r : N)
{
    -- bad constructor arguments number in branch
    case n of {
         O [m] -> r := O [];
         S [m] -> r := r
   }
} 
